# grasp-pipeline

./: .gitignore  CMakeLists.txt  README.md  current_paper.md  dependencies.txt  dianav2.world  grasp_env.txt  grasp_settings.txt  installation.txt  package.xml  requirements.txt  requirements_py37.txt  results.csv  results_400_1.csv  results_400_2.csv  results_400_thresh_70.csv  save.json  setup.py  status.txt
idl/: pcd_enc_msg.idl
launch/: grasp_pipeline_client.launch  grasp_pipeline_clients.launch  grasp_pipeline_evaluate_vae.launch  grasp_pipeline_server.launch  grasp_pipeline_servers.launch  grasp_pipeline_servers_adapter.launch  grasp_pipeline_servers_eval_ffhflow.launch  grasp_pipeline_servers_eval_ffhflow_yb.launch  grasp_pipeline_servers_eval_ffhgenerator.launch  grasp_pipeline_servers_eval_ffhnet.launch  grasp_pipeline_servers_eval_ffhnet_lx.launch  grasp_pipeline_servers_eval_ffhnet_multi_yb.launch  grasp_pipeline_servers_eval_ffhnet_yb.launch  grasp_pipeline_servers_evaluate_vae.launch  grasp_pipeline_servers_lx.launch  grasp_pipeline_servers_real.launch  grasp_pipeline_servers_real_vision_only.launch  grasp_pipeline_servers_real_yb.launch  grasp_pipeline_servers_robotiq.launch  grasp_pipeline_servers_robotiq_yb.launch  grasp_pipeline_servers_yb.launch
misc/: conda_base_requirements.txt  environment.yml  requirements.txt  status.txt
msg/: GraspObject.msg  ObjectToBeSpawned.msg
results/sim_grasp_succ/: ffhgen_latents_200.csv  ffhnet_latents_400_thresh_70.csv  grasp_success_sim_400_latents.csv  results_latents_400_thresh_90.csv
scripts/: baseline_segmentation.py  benchmark_open3d.py  camera_transform_broadcaster.py  conda_python3.sh  convert_pcd_with_cam_pose.py  convert_pcd_with_cam_pose.sh  encode_pcd_with_bps.py  encode_pcd_with_bps.sh  grasp_pipeline_real.py  infer_ffhflow.py  infer_ffhflow.sh  publish_point_cloud_save_path.py  table_object_segmenter.py  test_servers.py  vis_pcd.py
scripts/Mesh_util/: compute_inertia_tensor_from_mesh.py  process_meshes_hithand.py  reduce_faces.py
scripts/deprecated/: generate_hithand_preshape_refactor.py  generate_hithand_preshape_server.py  publish_point_cloud_save_path.py  table_object_segmenter.py  table_object_segmenter_conda.sh
scripts/mesh_util/: get_big_bird_models.py  object_names_in_datasets.py  prepare_objects_gazebo.py
scripts/test/: test_grasp_controller.py  test_pointcloud.py  test_record_grasp_data.py  test_servers.py
src/: align_object_frame.py  arm_moveit_planner_server.py  data_types.py  eigengrasps_hithand.py  execute_joint_trajectory_server.py  execute_trajectory_server.py  filter_palm_goal_poses_server.py  generate_hithand_preshape_server.py  generate_voxel_from_pcd_server.py  get_preshape_for_all_points.py  graspInference.py  manage_gazebo_scene_server.py  manage_moveit_scene_server.py  plan_arm_trajectory_server.py  save_visual_data_server.cpp  save_visual_data_server.py  update_object_and_palm_tf.py  utils.py
src/grasp_client/: data_gen_grasp_sim_client.py  grasp_sim_client.py  object_names_in_datasets.py  voxel_plan_sim_client.py
src/grasp_data_processing/: utah_adapter.py
src/grasp_pipeline/: data_gen_pipeline.py  eval_vae.py
src/server/: get_preshape_for_all_points_server.py  save_visual_data_server.py
src/sim/: control_sim_hithand_server.py  (+6 more)
srv/: BPSEncode.srv  ChangeModelVisibility.srv  CheckPoseValidity.srv  ControlHithand.srv  CreateNewScene.srv  EvaluateAndFilterGraspPoses.srv  ExecuteJointTrajectory.srv  FilterPalmPoses.srv  GenVoxelFromPcd.srv  GetCartesianPositionError.srv  GraspControl.srv  GraspPreshape.srv  HithandControl.srv  InferGraspPoses.srv  ManageMoveitScene.srv  PalmGoalPoseWorld.srv  PlanArmTrajectory.srv  PlanCartesianPathTrajectory.srv  PlanResetTrajectory.srv  RecordCollisionData.srv  RecordCollisionMultiObjData.srv  RecordGraspDataSim.srv  RecordGraspTrialData.srv  RecordGraspTrialMultiObjData.srv  ResetScene.srv  SaveVisualData.srv  SegmentGraspObject.srv  SimGraspData.srv  SmoothenJointTrajectory.srv  UpdateHandGazebo.srv  UpdateObjectGazebo.srv  VisualizeGraspPoseList.srv
tests/: publish_dummy_pcd.py  publish_dummy_vel.py  test_collision_detection.py  test_filter_plam_goal_poses_server.py  test_grasp_controller.py  test_grasping_robotiq.py  test_human_eigengrasp.py  test_pcd_and_origin.py  test_pointcloud.py  test_reconstruction.py  test_record_grasp_data.py  test_servers.py  test_show_grasps_for_object.py  test_spawn_hand.py  test_spawned_objects_tilt.py  test_trac_ik.py  test_visualize_pcds_vae.py
(+81 files in other folders)
